--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,4 +1,8 @@
-source 'https://rubygems.org'
-gem 'github-pages', group: :jekyll_plugins
-gem 'jekyll-redirect-from'
+# frozen_string_literal: true
+source "https://rubygems.org"
 
+git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
+
+# gem "rails"
+gem "github-pages", "~> 215", group: :jekyll_plugins
+gem 'jekyll-redirect-from'
