Switch to official gojekyll image

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -2,7 +2,7 @@ platform: linux/arm64
 
 pipeline:
   build:
-    image: 192.168.69.1:5000/gojekyll
+    image: danog/gojekyll
     when:
       branch: master
       event: push
